--- a/c30211p014/Final/Report.Rmd
+++ b/c30211p014/Final/Report.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE)
 Kiteboarding is an adventure water sport that consists of using a large steerable kite to pull yourself around on a board on top of the water. The kites are controlled through the bar and lines that connect to your harness, which is worn around your midsection. The kite can be flown specific patterns to generate power, and can even be used to jump high in the air. And when we say jump, we really mean it. Professional kiteboarders can jump 50 or 60 feet high and can easily float for hundreds of feet when the conditions are right. That's nearly 10 seconds of air time!
 
 Kite boarding is the fastest growing water sport in the world. The key to this sport is the Wind. This is what motivated us to do our analysis on Wind. 
-Wind being the key element of kiteboarding, there are a lot of details that come into play for a safe and good ride. Wind direction and wind power are the two most important elements for kiteboarders. The wind direction to be on-shore or side on-shore and the power to create enough power and acceleration for kiting. Wind power is normally measured in MPH or Knots. A good kite boarding day starts at 15MPH. That being said, too much power is not safe. Meaning that smaller size kites are used for more powerful winds. Normally kiteboarders look at increments of wind to choose their kites. For a 15 - 20 MPH, a 12 meter kite does a great job. For stronger winds between 20 - 25 perhaps a 9 meter is good for an average weighted person. for over 25+ MPH depending on the skill level smaller kites should be used. Below is a good reference to learn more about winds and kiting:
+Wind being the key element of kiteboarding, there are a lot of details that come into play for a safe and good ride. Wind direction and wind power are the two most important elements for kiteboarders. The wind direction to be on-shore or side on-shore and the power to create enough power and acceleration for kiting. Wind power is normally measured in mph or Knots. A good kite boarding day starts at 15 mph. That being said, too much power is not safe. Meaning that smaller size kites are used for more powerful winds. Normally kiteboarders look at increments of wind to choose their kites. For a 15 - 20 mph, a 12 meter kite does a great job. For stronger winds between 20 - 25 perhaps a 9 meter is good for an average weighted person. for over 25+ mph depending on the skill level smaller kites should be used. Below is a good reference to learn more about winds and kiting:
 http://www.gokite.com.au/resources/education/understanding-the-wind/
 
 The purpose of this analysis is to find the best windy days that you can travel to Northern Yucutan for your kiting vacation. 
@@ -159,14 +159,14 @@ filteredSampleData <- sampleData %>%
   filter(Time>=pseudoDate+dhours(11.5)) %>%
   filter(Time<=pseudoDate+dhours(13.5))
 sampleZoo <- convertPWSData2Zoo(filteredSampleData)
-plot(sampleZoo$WindSpeedMPH,type="b", main=sprintf("Wind Speed for %s",sampleDate), sub="Extract", xlab="Time", ylab="Wind Speed (MPH)")
+plot(sampleZoo$WindSpeedMPH,type="b", main=sprintf("Wind Speed for %s",sampleDate), sub="Extract", xlab="Time", ylab="Wind Speed (mph)")
 ```
 
 The next graph is the same period of time with the interpolated samples added:
 
 ```{r interpolation_example2, echo=FALSE}
 intZoo <- interpolateZoo(sampleZoo)
-plot(intZoo$WindSpeedMPH,type="b", main=sprintf("Wind Speed for %s",sampleDate), sub="Interpolated", xlab="Time", ylab="Wind Speed (MPH)")
+plot(intZoo$WindSpeedMPH,type="b", main=sprintf("Wind Speed for %s",sampleDate), sub="Interpolated", xlab="Time", ylab="Wind Speed (mph)")
 
 ```
 
@@ -220,7 +220,7 @@ _periodLength15, periodLength20, periodLength25_ : These are the most important 
 # Doing the zoo of the whole thing:
 sampleZoo <- convertPWSData2Zoo(sampleData)
 sampleZoo <- interpolateZoo(sampleZoo)
-plot(sampleZoo$WindSpeedMPH,type="l", main=sprintf("Wind Speed for %s",sampleDate), xlab="Time", ylab="Wind Speed (MPH)")
+plot(sampleZoo$WindSpeedMPH,type="l", main=sprintf("Wind Speed for %s",sampleDate), xlab="Time", ylab="Wind Speed (mph)")
 
 abline(h=15,lty="dotted")
 abline(h=20,lty="dotted")
@@ -241,7 +241,7 @@ With this information we created a calendar plot where each day is classified in
 
 Whenever there is a windy day (>15mph) then we also get an arrow indicating the average wind direction of the windy range, this information comes from columns _avgDlWindSpeedMPHGt15_ (size of arrow) and _avgDlWindDirectionDegreesGt15_ (direction). For this report only the last year is printed, refer to the appendix for the remaining years.
 
-```{r calendar_last_year, echo=FALSE, warning=FALSE, fig.align='center',fig.height=8, fig.width=8}
+```{r calendar_last_year, echo=FALSE, warning=FALSE, fig.align='center',fig.height=7, fig.width=7}
 
 targetDate <- year(endDateStr)
 calendarDailySummary(daySum,targetDate)
@@ -250,7 +250,7 @@ calendarDailySummary(daySum,targetDate)
 
 ## Monthly Report
 ```{r monthly_summary, include=FALSE}
-monthSum  <- computeMontlySummary(daySum)
+monthSum  <- computeMonthlySummary(daySum)
 
 ```
 
@@ -259,7 +259,7 @@ Finally we process the daily information to find out how many windy days we have
 The following overlapping bar charts were created as the final report:
 
 ```{r monthly_plot, echo=FALSE}
-plt <- ggplotMontlySummary(monthSum,startDateStr,endDateStr)
+plt <- ggplotMonthlySummary(monthSum,startDateStr,endDateStr)
 print(plt)
 ```
 
